force-app/main/default/objects/Caja__c/fields/Bag_Code__c.field-meta.xml
<CustomField>
    <fullName>Bag_Code__c</fullName>
    <externalId>true</externalId>
    <label>Bag Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>