force-app/main/default/objects/Caja__c/fields/Cantidad_de_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Pieces__c</fullName>
    <label>Cantidad de Pieces</label>
    <summaryForeignKey>Detalles_Master__c.Bag_Code__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>